alinha página corretamente e altera código depreciado.

--- a/index.html
+++ b/index.html
@@ -5,27 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
 
     <title>Decodificador de Texto</title>
 </head>
 <body>
-    <header>
-
-        <!-- <div>
+    <!-- <header>
+        <div>
             <span>Oracle + alura</span>
             <span>ONE - Oracle Next Education</span>
-        </div> -->
-    </header>
+        </div>
+    </header> -->
 
     <main class="container">
         <section class="logo">
             <img src="./assets/Frame 6.png" alt="imagem da letra A">
         </section>
         <section class="formulario">
-            <!-- <h1>Decodificador de Texto</h1> -->
-            <!-- <h2>Digite o texto a ser criptografado:</h2> -->
             <textarea name="texto" placeholder="Digite ou cole seu texto aqui..."></textarea>
             <div class="info">apenas letras maiúsculas e sem acento</div>
             <div class="botoes-cripto">
@@ -34,7 +31,6 @@
             </div>
         </section>
         <section class="resultado">
-            <!-- <h2 class="resultado__titulo">Texto Criptografado:</h2> -->
             <p class="resultado__textoCriptografado"></p>
             <button class="btnCopiar">Copiar</button>
         </section>
